# archunit_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yaml
demo/: Cargo.toml
demo/src/: main.rs  module_one.rs
demo/src/module_two/: mod.rs  sub2.rs
src/: assertion.rs  assertion_result.rs  lib.rs  parse.rs
src/ast/: enums.rs  impl_blocks.rs  mod.rs  parse.rs  structs.rs  visitor.rs
src/layer_rule/: check.rs  mod.rs  report.rs
src/rule/: mod.rs  module.rs  pattern.rs
src/rule/enums/: check.rs  condition.rs  mod.rs  reports.rs
src/rule/impl_block/: mod.rs
src/rule/modules/: check.rs  condition.rs  mod.rs  report.rs
src/rule/structs/: check.rs  condition.rs  mod.rs  reports.rs
