[package]
name = "archunit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["full", "extra-traits", "visit"] }
once_cell = "1.9.0"

[dev-dependencies]
speculoos = "0.8.0"
hex = "0.4.3"
